core: Use Java 16 for record support directly now that it's GA