@@ -77,10 +77,20 @@ tasks.withType(JavaCompile::class).configureEach {
         }*/
     }
     options.compilerArgs.add("-Xlint:-processing")
+    // For error-prone
     options.isFork = true
     options.forkOptions.jvmArgs = listOf(
         "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
+        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        // "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        // "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
     )
 }
 
@@ -134,7 +144,7 @@ tasks.jar {
 
 // Configure target versions
 indra {
-    javaVersions.testWith(8, 11, 15)
+    javaVersions.testWith(8, 11, 16)
 }
 
 // Forbidden API validation
